--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://quachout.github.io/jennyV2/index.html",
+  "homepage": "http://quachout.github.io/jennyV2",
   "name": "jenny-v2",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
   },
