--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://quachout.github.io/jennyV2",
+  "homepage": "https://jenhofilena.com",
   "name": "jenny-v2",
   "version": "0.1.0",
   "private": true,
